@@ -1,6 +1,6 @@
 4.0.0
 =====
-30 October 2024
+2 November 2024
 - Introduce Gwen processes to support multiple launch configurations
   - `-p|--process` option
 - Require Java 17+ instead of Java 11+
@@ -10,6 +10,7 @@
 - Make all input data read only by default
 - Add `--repl` option to open REPL regardless of batch and feature options
 - Change ignore placeholder syntax in template matcher from `!{}` to `@{*}`
+- Fix mutiple ignored lines in template matcher
 - Internal engine enhancements
   - Replace internal stack of data caches with a single data cache
   - Manage settings internally without exposing them as system properties
